# vfat-rs

./: Cargo.toml  DEV.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: CI.yml  benchmarks.yml  fuse-ci.yml  kani.yml  release.yml
benches/: directory_ops.rs  fat_table.rs  file_io.rs  path_traversal.rs
benches/helpers/: file_blockdev.rs  fs_setup.rs  mod.rs  setup.rs
dev/bench/: data.js
examples/: simple.rs
src/: cache.rs  error.rs  fileblockdevice.rs  io.rs  kani_proofs.rs  lib.rs  macros.rs  mbr.rs  time.rs  traits.rs  vfat.rs
src/api/: directory.rs  directory_entry.rs  file.rs  metadata.rs  mod.rs  timestamp.rs
src/api/directory_entry/: mod.rs  regular_entry.rs
src/api/raw_directory_entry/: long_file_name_entry.rs  mod.rs  regular_entry.rs  unknown_entry.rs
src/api/raw_directory_entry/formats/: attributes.rs  entry_id.rs  mod.rs
src/cluster/: cluster_reader.rs  cluster_writer.rs  mod.rs
src/fat_table/: fat_entry.rs  fat_reader.rs  fat_writer.rs  mod.rs
src/formats/: cluster_id.rs  extended_bios_parameter_block.rs  fsinfo.rs  mod.rs  path.rs  sector_id.rs
tests/: allocator_bounds.rs  common.rs  directory_cluster_reuse.rs  sequential_read.rs  sequential_write.rs  set_timestamps.rs  setup.sh  vfat.rs  vfat_write.rs
tests/block_devs/: array_blockdev.rs  file_blockdev.rs
vfat-fuse-integration/: Cargo.toml  README.md
vfat-fuse-integration/src/: lib.rs  main.rs  tests.rs
