[package]
name = "vfat-rs"
version = "0.1.0"
authors = ["Federico Ponzi <me@fponzi.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
opt-level = 2

[features]
default = []
std = ["snafu/std", "binrw/std", "chrono/std", "chrono/clock"]

[[example]]
name = "simple"
required-features = ["std"]

[dependencies]
log = "~0.4"
snafu = { version = "~0.8", default-features = false }
binrw = { version = "~0.13", default-features = false }
spin = "~0.9"
chrono = { version = "~0.4", optional = true, default-features = false }

[dev-dependencies]
env_logger = "~0.11"
rand = "~0.8"
chrono = "~0.4"

