[package]
name = "vfat-rs"
version = "0.1.0"
authors = ["Federico Ponzi <me@fponzi.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
opt-level = 2

[features]
default = []
std = ["snafu/std", "binrw/std", "chrono/std", "chrono/clock"]

[[example]]
name = "simple"
required-features = ["std"]

[dependencies]
log = "~0.4"
snafu = { version = "~0.8", default-features = false }
binrw = { version = "0.15.0", default-features = false }
spin = "0.10.0"
chrono = { version = "~0.4", optional = true, default-features = false }

[dev-dependencies]
env_logger = "~0.11"
rand = "~0.10"
chrono = "~0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "file_io"
harness = false
required-features = ["std"]

[[bench]]
name = "directory_ops"
harness = false
required-features = ["std"]

[[bench]]
name = "path_traversal"
harness = false
required-features = ["std"]

[[bench]]
name = "fat_table"
harness = false
required-features = ["std"]

